# torchviz

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  PACKAGE_SUMMARY.md  PYPI_PUBLISHING.md  QUICKSTART.md  README.md  START_HERE.md  pyproject.toml  setup.py
dimviz/: __init__.py  exporter.py  tracker.py
examples/: basic_usage.py  benchmark.py
tests/: test_dimviz.py
torchdimviz/: __init__.py
